--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@contentstack/json-rte-serializer": "^2.0.6",
@@ -20,11 +22,23 @@
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-interactions": "7.6.17",
+    "@storybook/addon-links": "7.6.17",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "7.6.17",
+    "@storybook/nextjs": "7.6.17",
+    "@storybook/react": "7.6.17",
+    "@storybook/react-webpack5": "^8.0.8",
+    "@storybook/test": "7.6.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "eslint-plugin-storybook": "^0.8.0",
+    "remark-gfm": "^4.0.0",
+    "storybook": "7.6.17",
     "typescript": "^5"
   }
 }
