--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@contentstack/json-rte-serializer": "^2.0.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
+    "@mui/material": "^5.15.15",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
     "next": "13.5.6",
