--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/material": "^5.15.15",
     "@types/jest": "^29.5.12",
+    "deepmerge": "^4.3.1",
     "jest": "^29.7.0",
+    "jss": "^10.10.0",
+    "jss-preset-default": "^10.10.0",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "redux": "^5.0.1",
     "ts-jest": "^29.1.2"
   },
   "devDependencies": {
