--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
+    "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@types/jest": "^29.5.12",
     "deepmerge": "^4.3.1",
@@ -24,6 +25,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.3",
     "redux": "^5.0.1",
     "ts-jest": "^29.1.2"
   },
