--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@asicsdigital/adi-blocks-core": "^0.2.0",
     "@contentstack/json-rte-serializer": "^2.0.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
